2003-03-10  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdlib.h (qsort): Remove const from first parm.
	Thanks to: Tien-Ren Chen  <trchen@sourceforge.users.net>

2003-03-03  Christopher Faylor  <cgf@redhat.com>

	* mingwex/getopt.c: Refresh from NetBSD sources.

2003-03-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/getopt.c: New file, copied from cygwin srcs.
	* include/getopt.h: New file, copied from cygwin srcs.
	* include/unistd.h: Include getopt.h.
	* mingwex/Makefile.in (DISTFILES): Add getopt.c.
	(POSIX_OBJS): Add getopt.o.

2003-03-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdio.h (vscanf): Add prototype.
	(vfscanf): Ditto.
	(vsscanf): Ditto.
	(vwscanf): Ditto.
	(vfwscanf): Ditto.
	(vswscanf): Ditto.
	* include/wchar.h (vwscanf): Add prototype.
	(vfwscanf): Ditto.
	(vswscanf): Ditto.
	* mingwex/snprintf.c: Move to mingwex/stdio.
 	* mingwex/vsnprintf.c: Ditto.
	* mingwex/snwprintf.c: Ditto.
	* mingwex/vsnwprintf.c: Ditto.
	* mingwex/Makefile.in (VPATH): Add $(srcdir)/stdio
	(STDIO_DISTFILES): Add.
	(DISTFILES): Adjust.
	(STDIO_STUB_OBJS): Rename to STDIO_OBJS and add v*scanf objects.
	(LIB_OBJS): Adjust.
	(dist): Adjust.

2003-03-02  Aaron W  LaFramboise   <AWLaFramboise@aol.com>

	* mingwex/stdio: New directory
	* mingwex/stdio/vfscanf.c: New file.
	* mingwex/stdio/vfwscanf.c:  New file.
	* mingwex/stdio/vscanf.c:  New file.
	* mingwex/stdio/vsscanf.c:  New file.
	* mingwex/stdio/vswscanf.c:  New file.
	* mingwex/stdio/vwscanf.c:  New file.

2003-02-25  Earnie Boyd  <earnie@users.sf.net>

	* Makefile.in (libmsvcrt20.a): Remove target and dependencies.
	(libmsvcrt40.a): Ditto.

2003-02-21  Earnie Boyd  <earnie@users.sf.net>

	Thanks to David Frasier <davidf@sjsoft.com> who inspired portions of
	this patch.
	* Makefile.in (libmsvcrtd.a): Add target library.
	(libmoldnamed.a): Ditto.
	(msvcrt.def, msvcrtd.def, msvcrt20.def, msvcrt40.def): Use msvcrt.def.in
	template to create.